--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ deploy_docker:
   before_script:
     - docker pull dockerhub.uns.ac.id:5000/tik:builder || true
     - docker pull dockerhub.uns.ac.id:5000/tik:latest || true
-    - docker pull dockerhub.uns.ac.id:5000/php74:base || true
+    - docker pull dockerhub.uns.ac.id:5000/php73:latest || true
   script:
     - curl -o .env http://localhost:8500/v1/kv/tik/env?raw
     - cp -Rf ~/ssh-docker74 ./.ssh
@@ -19,6 +19,20 @@ deploy_docker:
     - docker push dockerhub.uns.ac.id:5000/tik:$CI_COMMIT_SHORT_SHA
   environment:
     name: production
+  only:
+    - master
+  tags:
+    - docker
+
+testing:
+  stage: testing
+  script:
+    - curl -o kubectl.cfg  http://localhost:8500/v1/kv/tik/kubeconfig?raw
+    - curl -o env  http://localhost:8500/v1/kv/tik/env?raw
+    - kubectl --kubeconfig kubectl.cfg apply -f deploy/k8s/namespace.yaml
+    - kubectl --namespace tik --kubeconfig kubectl.cfg  create configmap tik-web-dev --from-file env --dry-run -o yaml | kubectl --kubeconfig kubectl.cfg apply -f -
+    - sed -i -e 's/tik:latest/tik:'$CI_COMMIT_SHORT_SHA'/g' deploy/k8s/dev-tik.yaml
+    - kubectl --kubeconfig kubectl.cfg apply -f deploy/k8s/dev-tik.yaml
   only:
     - master
   tags:
