--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "devDependencies": {
         "axios": "^0.21",
         "cross-env": "^7.0.3",
-        "laravel-mix": "^6.0.19",
+        "laravel-mix": "git+https://github.com/JeffreyWay/laravel-mix.git",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14"
     }
