--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
+        "predis/predis": "^1.1",
         "realrashid/sweet-alert": "^3.2"
     },
     "require-dev": {
