--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
         "predis/predis": "^1.1",
+        "league/flysystem-aws-s3-v3": "^1.0",
         "realrashid/sweet-alert": "^3.2"
     },
     "require-dev": {
